--- a/gutim/public/index.html
+++ b/gutim/public/index.html
@@ -26,6 +26,10 @@
     -->
     <!-- Css Styles -->
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="%PUBLIC_URL%/css/bootstrap.min.css"
       type="text/css"
@@ -67,6 +71,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- Js Plugins -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="%PUBLIC_URL%/js/jquery-3.3.1.min.js"></script>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
     <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script>
