paypal payment method

--- a/gutim/public/index.html
+++ b/gutim/public/index.html
@@ -55,6 +55,7 @@
       type="text/css"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" type="text/css" />
+    <script src="https://www.paypal.com/sdk/js?client-id=Aa-5ZwihIO-ZAgR_mdbDQR1ifHZCQe8Im9fH_0BLKpMOEyTclzdGMKo7MeEuemoM6YSDFhJoCbGjXjmg"></script>
     <title>React App</title>
   </head>
   <body>
