--- a/gutim/public/index.html
+++ b/gutim/public/index.html
@@ -69,7 +69,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" type="text/css" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://www.paypal.com/sdk/js?client-id=Aa-5ZwihIO-ZAgR_mdbDQR1ifHZCQe8Im9fH_0BLKpMOEyTclzdGMKo7MeEuemoM6YSDFhJoCbGjXjmg"></script>
-    <title>React App</title>
+    <title>Gutim GYM</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
